@@ -43,6 +43,8 @@ const (
 	UnknownSubscription Type = iota
 	// LogsSubscription queries for new or removed (chain reorg) logs
 	LogsSubscription
+	// AcceptedLogsSubscription queries for new or removed (chain reorg) logs
+	AcceptedLogsSubscription
 	// PendingLogsSubscription queries for logs in pending blocks
 	PendingLogsSubscription
 	// MinedAndPendingLogsSubscription queries for logs in mined and pending blocks.
@@ -50,8 +52,12 @@ const (
 	// PendingTransactionsSubscription queries tx hashes for pending
 	// transactions entering the pending state
 	PendingTransactionsSubscription
+	// AcceptedTransactionsSubscription queries tx hashes for accepted transactions
+	AcceptedTransactionsSubscription
 	// BlocksSubscription queries hashes for blocks that are imported
 	BlocksSubscription
+	// AcceptedBlocksSubscription queries hashes for blocks that are accepted
+	AcceptedBlocksSubscription
 	// LastSubscription keeps track of the last index
 	LastIndexSubscription
 )
@@ -90,6 +96,7 @@ type EventSystem struct {
 	// Subscriptions
 	txsSub           event.Subscription // Subscription for new transaction event
 	logsSub          event.Subscription // Subscription for new log event
+	logsAcceptedSub  event.Subscription // Subscription for new accepted log event
 	rmLogsSub        event.Subscription // Subscription for removed log event
 	pendingLogsSub   event.Subscription // Subscription for pending log event
 	chainSub         event.Subscription // Subscription for new chain event
@@ -101,6 +108,7 @@ type EventSystem struct {
 	uninstall       chan *subscription         // remove filter for event notification
 	txsCh           chan core.NewTxsEvent      // Channel to receive new transactions event
 	logsCh          chan []*types.Log          // Channel to receive new log event
+	logsAcceptedCh  chan []*types.Log          // Channel to receive new accepted log event
 	pendingLogsCh   chan []*types.Log          // Channel to receive new log event
 	rmLogsCh        chan core.RemovedLogsEvent // Channel to receive removed log event
 	chainCh         chan core.ChainEvent       // Channel to receive new chain event
@@ -123,6 +131,7 @@ func NewEventSystem(backend Backend, lightMode bool) *EventSystem {
 		txsCh:           make(chan core.NewTxsEvent, txChanSize),
 		logsCh:          make(chan []*types.Log, logsChanSize),
 		rmLogsCh:        make(chan core.RemovedLogsEvent, rmLogsChanSize),
+		logsAcceptedCh:  make(chan []*types.Log, logsChanSize),
 		pendingLogsCh:   make(chan []*types.Log, logsChanSize),
 		chainCh:         make(chan core.ChainEvent, chainEvChanSize),
 		chainAcceptedCh: make(chan core.ChainEvent, chainEvChanSize),
@@ -134,6 +143,7 @@ func NewEventSystem(backend Backend, lightMode bool) *EventSystem {
 	m.logsSub = m.backend.SubscribeLogsEvent(m.logsCh)
 	m.rmLogsSub = m.backend.SubscribeRemovedLogsEvent(m.rmLogsCh)
 	m.chainSub = m.backend.SubscribeChainEvent(m.chainCh)
+	m.logsAcceptedSub = m.backend.SubscribeAcceptedLogsEvent(m.logsAcceptedCh)
 	m.chainAcceptedSub = m.backend.SubscribeChainAcceptedEvent(m.chainAcceptedCh)
 	m.pendingLogsSub = m.backend.SubscribePendingLogsEvent(m.pendingLogsCh)
 	m.txsAcceptedSub = m.backend.SubscribeAcceptedTransactionEvent(m.txsAcceptedCh)
@@ -349,13 +359,18 @@ func (es *EventSystem) handleRemovedLogs(filters filterIndex, ev core.RemovedLog
 	}
 }
 
-func (es *EventSystem) handleTxsEvent(filters filterIndex, ev core.NewTxsEvent) {
+func (es *EventSystem) handleTxsEvent(filters filterIndex, ev core.NewTxsEvent, accepted bool) {
 	hashes := make([]common.Hash, 0, len(ev.Txs))
 	for _, tx := range ev.Txs {
 		hashes = append(hashes, tx.Hash())
 	}
 	for _, f := range filters[PendingTransactionsSubscription] {
 		f.hashes <- hashes
+	}
+	if accepted {
+		for _, f := range filters[AcceptedTransactionsSubscription] {
+			f.hashes <- hashes
+		}
 	}
 }
 
@@ -407,6 +422,33 @@ func (es *EventSystem) lightFilterNewHead(newHeader *types.Header, callBack func
 	}
 }
 
+func (es *EventSystem) handleAcceptedLogs(filters filterIndex, ev []*types.Log) {
+	if len(ev) == 0 {
+		return
+	}
+	for _, f := range filters[AcceptedLogsSubscription] {
+		matchedLogs := filterLogs(ev, f.logsCrit.FromBlock, f.logsCrit.ToBlock, f.logsCrit.Addresses, f.logsCrit.Topics)
+		if len(matchedLogs) > 0 {
+			f.logs <- matchedLogs
+		}
+	}
+}
+
+func (es *EventSystem) handleChainAcceptedEvent(filters filterIndex, ev core.ChainEvent) {
+	for _, f := range filters[AcceptedBlocksSubscription] {
+		f.headers <- ev.Block.Header()
+	}
+	if es.lightMode && len(filters[LogsSubscription]) > 0 {
+		es.lightFilterNewHead(ev.Block.Header(), func(header *types.Header, remove bool) {
+			for _, f := range filters[LogsSubscription] {
+				if matchedLogs := es.lightFilterLogs(header, f.logsCrit.Addresses, f.logsCrit.Topics, remove); len(matchedLogs) > 0 {
+					f.logs <- matchedLogs
+				}
+			}
+		})
+	}
+}
+
 // filter logs of a single header in light client mode
 func (es *EventSystem) lightFilterLogs(header *types.Header, addresses []common.Address, topics [][]common.Hash, remove bool) []*types.Log {
 	if bloomFilter(header.Bloom, addresses, topics) {
@@ -453,9 +495,12 @@ func (es *EventSystem) eventLoop() {
 	defer func() {
 		es.txsSub.Unsubscribe()
 		es.logsSub.Unsubscribe()
+		es.logsAcceptedSub.Unsubscribe()
 		es.rmLogsSub.Unsubscribe()
 		es.pendingLogsSub.Unsubscribe()
 		es.chainSub.Unsubscribe()
+		es.chainAcceptedSub.Unsubscribe()
+		es.txsAcceptedSub.Unsubscribe()
 	}()
 
 	index := make(filterIndex)
@@ -466,15 +511,21 @@ func (es *EventSystem) eventLoop() {
 	for {
 		select {
 		case ev := <-es.txsCh:
-			es.handleTxsEvent(index, ev)
+			es.handleTxsEvent(index, ev, false)
 		case ev := <-es.logsCh:
 			es.handleLogs(index, ev)
+		case ev := <-es.logsAcceptedCh:
+			es.handleAcceptedLogs(index, ev)
 		case ev := <-es.rmLogsCh:
 			es.handleRemovedLogs(index, ev)
 		case ev := <-es.pendingLogsCh:
 			es.handlePendingLogs(index, ev)
 		case ev := <-es.chainCh:
 			es.handleChainEvent(index, ev)
+		case ev := <-es.chainAcceptedCh:
+			es.handleChainAcceptedEvent(index, ev)
+		case ev := <-es.txsAcceptedCh:
+			es.handleTxsEvent(index, ev, true)
 
 		case f := <-es.install:
 			if f.typ == MinedAndPendingLogsSubscription {
