@@ -661,6 +661,7 @@ func (w *worker) resultLoop() {
 				logs = append(logs, receipt.Logs...)
 			}
 			// Commit block and state to database.
+			fmt.Println("Writing block to dtabase....")
 			_, err := w.chain.WriteBlockWithState(block, receipts, logs, task.state, true)
 			if err != nil {
 				log.Error("Failed writing block to chain", "err", err)
@@ -674,10 +675,12 @@ func (w *worker) resultLoop() {
 				}
 			}
 
+			fmt.Println("Worker: Broadcast the block and announce chain insertion event")
 			// Broadcast the block and announce chain insertion event
 			w.mux.Post(core.NewMinedBlockEvent{Block: block})
 
 			// Insert the block into the set of pending ones to resultLoop for confirmations
+			fmt.Println("Worker: Insert the block into the set of pending ones to resultLoop for confirmations", block.NumberU64())
 			w.unconfirmed.Insert(block.NumberU64(), block.Hash())
 
 		case <-w.exitCh:
